crates/sourcepawn-studio/tests/text_document/completion/snapshots/main__text_document__completion__macros__macro_positive_offset_global_scope.snap
---
source: crates/sourcepawn-studio/tests/text_document/completion/macros.rs
assertion_line: 6
expression: "complete(r#\"\n%! main.sp\n#define FOOOOO 1\nint foo = FOOOOO;\n\n|\n^\"#, None)"
---
[
  {
    "label": "FOOOOO",
    "kind": 21,
    "detail": "#define FOOOOO 1",
    "deprecated": false,
    "insertTextFormat": 1
  },
  {
    "label": "foo",
    "kind": 6,
    "detail": "int foo;",
    "deprecated": false,
    "sortText": "0",
    "insertTextFormat": 1
  }
]
